# AnsatzEvolve

./: .gitignore  Benchmarks.md  Manual.md  README.md
Hams/refine/: DeDuplicatedMinima  DeDuplicatedMinima_BKP  canonicalmin  extractedmin  extractedmin_10000
docs/: _ansatz_manager_8h.html  _ansatz_manager_8h.js  _ansatz_manager_8h_source.html  _ansatz_synth_interface_8cpp.html  _ansatz_synth_interface_8f90.html  _ansatz_synth_interface_8f90.js  _ansatz_synth_interface_8h.html  _ansatz_synth_interface_8h.js  _external_interface_8dox.html  _getting_started_8dox.html  _ham_gen_8py.js  _manual_8dox.html  _py_ansatz_evolve_8cpp.html  _py_ansatz_evolve_8pyi.js  _t_u_p_s_loading_utils_8cpp.html  _t_u_p_s_loading_utils_8h.html  _t_u_p_s_loading_utils_8h_source.html  annotated.html  ansatz_8cpp.js  ansatz_8h.html  ansatz_8h_source.html  benchmark_8cpp.html  benchmark_8cpp.js  benchmark_8h.js  benchmark_8h_source.html  benchmarks_8dox.html  benchmarks_page.html  bindings_page.html  class_d_i_i_s-members.html  class_d_i_i_s.js  class_fused_evolve-members.html  class_hamiltonian_matrix.html  class_hamiltonian_matrix.js  class_matrix-members.html  class_matrix.js  class_t_u_p_s_quantities.js  classbase_ansatz-members.html  classbase_ansatz.html  classbase_ansatz.js  classcompressor.html  (+139 more)
docs/html/: _ansatz_manager_8cpp.html  _ansatz_synth_interface_8cpp.js  _ansatz_synth_interface_8h_source.html  _ham_gen_8py.html  _py_ansatz_evolve_8cpp.js  _py_ansatz_evolve_8pyi.html  _t_u_p_s_loading_utils_8cpp.js  _t_u_p_s_loading_utils_8h.js  annotated_dup.js  ansatz_8cpp.html  ansatz_8h.js  benchmark_8h.html  class_d_i_i_s.html  class_fused_evolve.html  class_fused_evolve.js  class_hamiltonian_matrix-members.html  class_matrix.html  class_py_ansatz_evolve_1_1state_ansatz_manager-members.html  class_py_ansatz_evolve_1_1state_ansatz_manager.html  class_py_ansatz_evolve_1_1state_ansatz_manager.js  class_s_z_andnumber_operator_compressor-members.html  class_s_z_andnumber_operator_compressor.html  class_s_z_andnumber_operator_compressor.js  class_t_u_p_s_quantities-members.html  class_t_u_p_s_quantities.html  classcompressor-members.html  classcsv_writer-members.html  classcsv_writer.js  classlogger.html  classlogger.js  classnumber_operator_compressor.html  classoperator_pool.html  classprojection_matrix-members.html  classprojection_matrix.html  classprojection_matrix.js  classsparse_matrix.html  classstate_ansatz.html  classstate_ansatz.js  classstate_ansatz_manager-members.html  classstate_rotate-members.html  (+84 more)
docs/html/search/: all_11.js  all_13.js  all_15.js  all_2.js  all_4.js  all_7.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_5.js  classes_6.js  classes_b.js  classes_f.js  defines_8.js  files_0.js  files_3.js  files_4.js  files_5.js  files_6.js  files_9.js  functions_1.js  functions_13.js  functions_14.js  functions_17.js  functions_3.js  functions_8.js  functions_9.js  functions_d.js  functions_f.js  namespaces_1.js  namespaces_3.js  pages_2.js  pages_7.js  pages_9.js  pages_a.js  related_0.js  related_1.js  related_2.js  related_3.js  (+11 more)
docs/search/: all_0.js  all_1.js  all_12.js  all_14.js  all_16.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  files_1.js  files_2.js  files_7.js  files_8.js  files_a.js  files_b.js  (+49 more)
python/: CanonicalAngles.py  CanonicalAngles_CanonicaliseMinima.py  CanonicalAngles_DeDuplicate.py  CanonicalAngles_findGroup.py  DNeb.ipynb  Explore.py  FindPseudoHartreeFockEnergy.py  HamGen.py  HermitianExcTest.py  Test2RDM.py  makeOperators.py  requirements.txt
src/: AnsatzManager.cpp  AnsatzManager.h  AnsatzSynthInterface.cpp  AnsatzSynthInterface.f90  CMakeLists.txt  PyAnsatzEvolve.cpp  TUPSLoadingUtils.cpp  TUPSLoadingUtils.h  ansatz.cpp  ansatz.h  benchmark.cpp  benchmark.h  csvwriter.cpp  csvwriter.h  diis.cpp  diis.h  fusedevolve.cpp  fusedevolve.h  globals.h  hamiltonianmatrix.cpp  hamiltonianmatrix.h  linalg.cpp  linalg.h  logger.cpp  logger.h  main.cpp  mpirelay.cpp  mpirelay.h  myComplex.h  operatorpool.cpp  operatorpool.h  serialise.h  sparsematrix.cpp  sparsematrix.h  test.F90  test.f90  threadpool.cpp  threadpool.h  tupsquantities.cpp  tupsquantities.h
src/doxygen/: CMakeLists.txt  ExternalInterface.dox  GettingStarted.dox  Manual.dox  PyAnsatzEvolve.pyi  benchmarks.dox  macros.tex
