# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

cmake_minimum_required(VERSION 3.5)
project(AnsatzEvolve LANGUAGES CXX Fortran)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set (CMAKE_C_STANDARD 11)
set(CMAKE_VERBOSE_MAKEFILE)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif(NOT CMAKE_BUILD_TYPE)

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    # using regular Clang or AppleClang
    add_compile_options(-Wall -Wextra -march=native -Wno-unused-parameter)
    if (CMAKE_OSX_SYSROOT)
        #Apple specific configs
        message("COMPILER IDENTIFIED AS APPLE CLANG")

        set(COMPILER_IS_APPLECLANG On)
        add_compile_definitions(APPLECLANG)
    else()
        #Clang specific configs - Not Apple
        message("COMPILER IDENTIFIED AS CLANG")
        set(COMPILER_IS_CLANG On)
    endif()
elseif(CMAKE_COMPILER_IS_GNUCXX)
    add_compile_options(-Wall -Wextra -march=native -Wmaybe-uninitialized -Wno-stringop-overflow)
    message("COMPILER IDENTIFIED AS GNU")
else()
    message(WARNING "UNKNOWN COMPILER ${CMAKE_CXX_COMPILER_ID}")
endif()

if (COMPILER_IS_CLANG OR COMPILER_IS_APPLECLANG)
  # using regular Clang or AppleClang
  set(CMAKE_CXX_FLAGS "-Wall -Wextra -march=native")
else()
    set(CMAKE_CXX_FLAGS "-Wall -Wextra -march=native -fopenmp -Wmaybe-uninitialized -fuse-ld=gold")
endif()

if (COMPILE_PYTHON_LIBS)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fvisibility=hidden")
endif()

# set(CMAKE_VERBOSE_MAKEFILE on)
# include(GNUInstallDirs)
include_directories(./third-party/eigen-3.4.0)
if (COMPLEX_MODE)
    add_compile_definitions(useComplex)
endif()

#Core library
add_library(cppAnsatzSynthLib STATIC
    ansatz.h ansatz.cpp
    operatorpool.h operatorpool.cpp
    linalg.h linalg.cpp
    sparsematrix.h sparsematrix.cpp
    globals.h
    csvwriter.h csvwriter.cpp
    threadpool.h threadpool.cpp
    myComplex.h
    TUPSLoadingUtils.cpp
    TUPSLoadingUtils.h
    logger.h
    logger.cpp
    tupsquantities.cpp
    tupsquantities.h
    benchmark.h benchmark.cpp
    diis.h diis.cpp
    fusedevolve.cpp fusedevolve.h
    hamiltonianmatrix.h hamiltonianmatrix.cpp
)
if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
else()
    target_link_libraries(cppAnsatzSynthLib pthread m)
endif()

#C++ executable
add_executable(cppAnsatzSynth main.cpp)
target_link_libraries(cppAnsatzSynth cppAnsatzSynthLib)

#Fortran Interface

#Uncomment to build the interface Header with gfortran in the build/Generated directory
#file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/Generated)
#ADD_CUSTOM_COMMAND(OUTPUT Generated/AnsatzSynthInterface.h
#  COMMAND gfortran -fc-prototypes -fsyntax-only ${CMAKE_SOURCE_DIR}/AnsatzSynthInterface.f90 > Generated/AnsatzSynthInterface.h
#  DEPENDS ${CMAKE_SOURCE_DIR}/AnsatzSynthInterface.f90
#)

#Build the C Interface to cppAnsatzSynthLib
add_library(AnsatzSynthInterface STATIC AnsatzSynthInterface.cpp Generated/AnsatzSynthInterface.h
    AnsatzManager.h AnsatzManager.cpp)
target_link_libraries(AnsatzSynthInterface PRIVATE cppAnsatzSynthLib)
#target_include_directories(AnsatzSynthInterface PRIVATE ${CMAKE_BINARY_DIR}) # For the autogenerated header

#One needs to include AnsatzSynthInterface.f90 upstream in any fortran code.
set(fortran_files test.F90 AnsatzSynthInterface.f90)
add_executable(FortranBindingsTest ${fortran_files})
target_link_libraries(FortranBindingsTest AnsatzSynthInterface)
set_source_files_properties(test.F90 PROPERTIES COMPILE_FLAGS -ffree-line-length-none)

#Python Interface
set(PYTHON_MODULE_SOURCES PyAnsatzEvolve.cpp)

if (COMPILE_PYTHON_LIBS)
    set(pybind11_DIR ${CMAKE_SOURCE_DIR}/../share/cmake/pybind11/)
    set(PYBIND11_FINDPYTHON ON)
    find_package(pybind11 CONFIG REQUIRED)

    pybind11_add_module(PyAnsatzEvolve ${PYTHON_MODULE_SOURCES})


    # target_include_directories(cppNEGF PRIVATE ./third-party/eigen-3.4.0)
    target_link_libraries(PyAnsatzEvolve PUBLIC AnsatzSynthInterface)

    #InstallDir
    install(TARGETS PyAnsatzEvolve DESTINATION ${CMAKE_SOURCE_DIR}/../) # Set Install prefix to python directory
endif()



